src/objects/Spot_Check__c.object
<CustomObject>
    <fields>
        <fullName>API_Response__c</fullName>
        <label>API Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Days__c</fullName>
        <formula>Business_Name__r.Active_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_Schedule_Added_Correct_Days__c</fullName>
        <description>Ad Schedule Added ( Correct Days )</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Ad Schedule Added ( Correct Days )</inlineHelpText>
        <label>Ad Schedule Added ( Correct Days )</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ads_have_what_they_do_selling_point_CTA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ads have what they do selling point CTA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_all_possible_extensions_setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are all possible extensions setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_the_ads_set_to_rotate_evenly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are the ads set to rotate evenly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_the_right_notification_turned_off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are the right notification turned off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Checked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build Checked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Spot_Checks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Build_Checked_Date__c</fullName>
        <label>Build Checked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Spot_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Extention_s_Added__c</fullName>
        <description>Call Extention&apos;s Added</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Call Extention&apos;s Added</inlineHelpText>
        <label>Call Extention&apos;s Added</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Forwarding_Turned_On__c</fullName>
        <description>Call Forwarding Turned On</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Call Forwarding Turned On</inlineHelpText>
        <label>Call Forwarding Turned On</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Callout_s_Added_x_4__c</fullName>
        <description>Callout&apos;s Added x 4</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Callout&apos;s Added x 4</inlineHelpText>
        <label>Callout&apos;s Added x 4</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_Correct_Time_Zone_Of_Account__c</fullName>
        <description>Check Correct Time Zone Of Account</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Check Correct Time Zone Of Account</inlineHelpText>
        <label>Check Correct Time Zone Of Account</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_SQR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check SQR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_Tracking_Code_Sent_To_Client__c</fullName>
        <description>Conversion Tracking Code Sent To Client</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Conversion Tracking Code Sent To Client</inlineHelpText>
        <label>Conversion Tracking Code Sent To Client</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correct_Budget_Applied__c</fullName>
        <description>Correct Budget Applied</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Correct Budget Applied</inlineHelpText>
        <label>Correct Budget Applied</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correct_Campaign_s_Created__c</fullName>
        <description>Correct Campaign&apos;s Created</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Correct Campaign&apos;s Created</inlineHelpText>
        <label>Correct Campaign&apos;s Created</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correct_Location_Targeting__c</fullName>
        <description>Correct Location Targeting</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Correct Location Targeting</inlineHelpText>
        <label>Correct Location Targeting</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_of_Month__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End of Month</label>
        <referenceTo>End_of_Month__c</referenceTo>
        <relationshipName>Spot_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generic_Negative_Keywords_Added__c</fullName>
        <description>Generic Negative Keywords Added</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Generic Negative Keywords Added</inlineHelpText>
        <label>Generic Negative Keywords Added</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_GTM_code_been_sent_to_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has GTM code been sent to client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_negative_keywords_been_added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have negative keywords been added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_conversion_tracking_setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is conversion tracking setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_location_targeting_correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is location targeting correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_targeting_correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is targeting correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_correct_type_of_campaign_set_up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Display / Search</inlineHelpText>
        <label>Is the correct type of campaign set up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_2_ads_adgroup_for_split_testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is there 2 ads adgroup for split testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords_separated_into_correct_adgroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keywords separated into correct adgroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_To_Optmyzr__c</fullName>
        <label>Linked To Optmyzr</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locations_Extensions_Added__c</fullName>
        <description>Locations Extensions Added</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Locations Extensions Added</inlineHelpText>
        <label>Locations Extensions Added</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Negative_Locations_Added__c</fullName>
        <description>Negative Locations Added</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Negative Locations Added</inlineHelpText>
        <label>Negative Locations Added</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_AdGroups__c</fullName>
        <label>No of AdGroups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Ads__c</fullName>
        <label>No of Ads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Campaigns__c</fullName>
        <label>No of Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Extensions__c</fullName>
        <label>No of Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Negative_Keywords__c</fullName>
        <label>No of Negative Keywords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note_10__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_12__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Going_Task_s_Setup__c</fullName>
        <description>On Going Task&apos;s Setup</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>On Going Task&apos;s Setup</inlineHelpText>
        <label>On Going Task&apos;s Setup</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sign_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign Up</label>
        <referenceTo>Sign_Up__c</referenceTo>
        <relationshipName>Spot_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sitelink_s_Added_x_4__c</fullName>
        <description>Sitelink&apos;s Added x 4</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>Sitelink&apos;s Added x 4</inlineHelpText>
        <label>Sitelink&apos;s Added x 4</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spot_Check_Completed_By__c</fullName>
        <label>Spot Check Completed By</label>
        <picklist>
            <picklistValues>
                <fullName>David Powell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramsay Pontin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan Goldsworthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniella Pozzolungo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Katie Elms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharene Moses</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spotcheck_Completed_Date__c</fullName>
        <label>Spotcheck Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spotchecked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spotchecked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Spot_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending TL Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending CM Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Structured_Snippets_x_5_Added__c</fullName>
        <globalPicklist>BuildCheckList</globalPicklist>
        <label>Structured Snippets x 5 Added</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TL_Notes__c</fullName>
        <label>Build Check Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Spot_Build_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Will_keywords_bring_in_the_right_traffic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Will keywords bring in the right traffic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_Keyword_x_3_Variants_Per_Ad_Group__c</fullName>
        <description>1 Keyword x 3 Variants Per Ad Group</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>1 Keyword x 3 Variants Per Ad Group</inlineHelpText>
        <label>1 Keyword x 3 Variants Per Ad Group</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3_Expanded_Text_Ads_Per_Ad_Group_Maxim__c</fullName>
        <description>3 Expanded Text Ads Per Ad Group ( Maximise Character Limit )</description>
        <globalPicklist>BuildCheckList</globalPicklist>
        <inlineHelpText>3 Expanded Text Ads Per Ad Group ( Maximise Character Limit )</inlineHelpText>
        <label>3 Expanded Text Ads Per Ad Group ( Maxim</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>note_11__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Spot/Build Check</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sign_Up__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Check #{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spot/Build Checks</pluralLabel>
    <recordTypes>
        <fullName>Auto_Build_Check</fullName>
        <active>true</active>
        <description>Auto Build Check</description>
        <label>Auto Build Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Auto_Build_Check_Edit</fullName>
        <active>true</active>
        <description>Auto Build Check Edit</description>
        <label>Auto Build Check Edit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Build_Check</fullName>
        <active>true</active>
        <label>Build Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>Spot_Check</fullName>
        <active>true</active>
        <label>Spot Check</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>